--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
--- start here
+<!DOCTYPE html>                         
+<!-- tells the browser that this is an HTML document-->
+<html lang="en">                         
+<!-- after DOCTYPE HTML always starts with an html tag-->
+    <head>                              
+    <!-- next comes the the head which contains information about the document-->
+        <title>List of Dope Horror Movies</title>
+        <!-- the title is required-->
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="styles.css" />
+        <script src="script.js"></script>
+    </head>
+    <body>
+    <!--then after the head there is the body of the HTML document, with all the meat--> 
+        <h1 class="title">Horror Movies Dert Kerm</h1>
+        <!--'class' is an 'attribute'-->
+        <img src="https://raw.githubusercontent.com/PsychicDonkey/special-dollop/main/theory-of-action.png" height=500>
+        <h1 class="blood">Woe to you, oh earth and Sea</h1>
+        <!--we've added some formatting tags here-->
+        <p>for the devil sends the beast <strong> with wrath</strong></p>
+        <p><em>because he knows that time is <strong>short</strong></em></p>
+        <p>let him who hath understanding reckon the <strong>number of the beast</strong></p>
+        <p>for it is a <strong>human </strong>number...</p>
+        
+        <h2>here is a list of the movies that we watched!</h2>
+            <ul>
+                <li>The Shining</li>
+                <li>It Follows</li>
+                <li>Stopmotion</li>
+                <li>Dawn of the Dead</li>
+                <li>[REC]</li>
+            </ul>
+        <h2>ranked from best to worst</h2>
+            <ol>
+                <li>It Follows</li>
+                <li>[REC]</li>
+                <li>The Shining</li>
+                <li>Dawn of the Dead</li>
+                <li>Stopmotion</li>
+            </ol>
+        
+        <div id="mainDiv">Hello Divkness my old friend</div>
+        <br />
+        <button onclick="buttonClicked()">Click me</button>
+    </body>
+</html>
