--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <body>
     <!--then after the head there is the body of the HTML document, with all the meat--> 
         <h1 class="title">Horror Movies Dert Kerm</h1>
+        <h2>This is my first stab at a website - howzat taste muthafuckah!</h2>
+        <h3>Too many mutha-uckers, uckin' with mah - shiiiii</h3>
+        <h4>Too many to count, mutha-ucker</h4>
         <!--'class' is an 'attribute'-->
         <img src="https://raw.githubusercontent.com/PsychicDonkey/special-dollop/main/images/theory-of-action.png" height=500>
         <h1 class="blood">Woe to you, oh earth and Sea</h1>
